feat(course-items): Improved error handling for course-items feature